--- a/Styles.css
+++ b/Styles.css
@@ -230,6 +230,17 @@ body {
             cursor: pointer;
             margin-bottom: 10px;
         }
+        .image2 {
+            margin-left: 10px;
+            flex: 0 0 auto; /* The image won't grow or shrink */
+            width: 50px;
+            height: 50px;
+            background-color: white;
+            margin-right: 10px; /* Add some spacing between image and paragraph */
+            background-size: cover;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
 
         .content {
             flex: 1; /* The paragraph will take the remaining space */
